--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
-  "dependencies": {
-    "bootstrap": "^5.3.0",
-    "react-bootstrap": "^2.7.4",
-    "react-icons": "^4.9.0"
-  }
+    "name": "learn1",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "app.js",
+    "scripts": {
+        "start": "node backend/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/PatrickBoynton/learn1.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/PatrickBoynton/learn1/issues"
+    },
+    "homepage": "https://github.com/PatrickBoynton/learn1#readme",
+    "dependencies": {
+        "express": "^4.18.2"
+    }
 }
