--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "type": "module",
     "main": "app.js",
     "scripts": {
-        "start": "node backend/app.js",
+        "start": "nodemon backend/app.js",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm start\" \"npm run client\" ",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -20,6 +22,11 @@
     },
     "homepage": "https://github.com/PatrickBoynton/learn1#readme",
     "dependencies": {
+        "dotenv": "^16.3.1",
         "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.0",
+        "nodemon": "^2.0.22"
     }
 }
