--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "homepage": "https://github.com/PatrickBoynton/learn1#readme",
     "dependencies": {
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mongoose": "^7.3.0"
     },
     "devDependencies": {
         "concurrently": "^8.2.0",
