--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/PatrickBoynton/learn1#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.3.0"
