--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongoose": "^7.3.0"
+        "mongoose": "^7.3.0",
+        "prettier": "^2.8.8"
     },
     "devDependencies": {
         "concurrently": "^8.2.0",
