--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     },
     "homepage": "https://github.com/PatrickBoynton/learn1#readme",
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.3.0",
-        "prettier": "^2.8.8"
+        "prettier": "^2.8.8",
+        "react-redux": "^8.1.0"
     },
     "devDependencies": {
         "concurrently": "^8.2.0",
