--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.3.0",
-        "prettier": "^2.8.8",
-        "react-redux": "^8.1.0"
+        "prettier": "^2.8.8"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "concurrently": "^8.2.0",
         "nodemon": "^2.0.22"
     }
