--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.3.0",
+        "multer": "^1.4.5-lts.1",
         "prettier": "^2.8.8"
     },
     "devDependencies": {
