--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
     "name": "learn1",
     "version": "1.0.0",
     "description": "",
-    "type": "module",
-    "main": "app.js",
+    "main": "app.ts",
     "scripts": {
-        "start": "nodemon backend/app.js",
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm start\" \"npm run client\"",
-        "import": "node backend/seeder.js",
-        "destroy": "node backend/seeder.js -d",
+        "start": "ts-node ./backend/app.ts",
+        "import": "ts-node backend/seeder.ts",
+        "destroy": "ts-node backend/seeder.ts -d",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -32,10 +31,16 @@
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.3.0",
         "multer": "^1.4.5-lts.1",
-        "prettier": "^2.8.8"
+        "prettier": "^2.8.8",
+        "ts-node": "^10.9.1"
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/bcryptjs": "^2.4.3",
+        "@types/cookie-parser": "^1.4.4",
+        "@types/express": "^4.17.18",
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/multer": "^1.4.7",
         "concurrently": "^8.2.0",
         "nodemon": "^2.0.22"
     }
